Grok changes
************

1.0b1 (unreleased)
==================

- Import zope.app.container interfaces from their actual definition not from a
  re-import.


1.0a3 (2009-04-10)
==================

* Pin grokui.admin to 0.3.2

* Pin grokcore.view to 1.5.

* Pin grokcore.component to 1.6.


1.0a2 (2009-04-08)
==================

* Documentation and doc string updates.

* Pin grokui.admin to 0.3.

* Pin grokcore.view to 1.4.

* Synced versions.cfg with the latest KGS release available at:
  http://download.zope.org/zope3.4/3.4.0/versions.cfg

* Expose ``IBeforeTraverseEvent`` for import in the ``grok`` namespace.

1.0a1 (2009-01-08)
==================

Feature changes
---------------

* Introduced ``grok.interfaces.IGrokSecurityView``, a marker interface
  which non-Grok views can use to state that they want to be handled
  like regular Grok views by the Grok publisher.

* Expose the ``DirectoryResource`` component from grokcore.view and the
  accompanying ``path`` directive.

* Similar to the layers and skins restructuring, the ``grok.RESTProtocol``
  baseclass has been removed in favour of a ``grok.restskin(name)`` directive
  that can be used on REST layer interfaces. Introduced the IRESTLayer base
  interfaces for defining REST layers.

* Besides our extensive existing documentation, we have also started
  to add a lot of docstrings to the Grok source code so it becomes
  easier to understand.

Bug fixes
---------

* Have GrokForm define an empty actions attribute by default, in order
  for "action-less" forms to work easily.

* Allow the grok.layer() directive on JSON components. Closes
  https://bugs.launchpad.net/grok/+bug/310558

* Close a bad security hole (also fixed in 0.14.1 and other
  releases). See
  http://grok.zope.org/blog/security-issue-in-grok-please-upgrade

Restructuring
-------------

* Viewlet-related base classes and helpers have been moved out to a
  ``grokcore.viewlet`` package which Grok now depends on.

0.14 (2008-09-29)